# Accident-Detection

./: .gitignore  .replit  CNN-for-Accident-Detection.ipynb  README.md  db.sqlite3  framer.py  manage.py  props.py  pyproject.toml  pyvenv.cfg  replit.nix
accidentdetection/: asgi.py  settings.py  urls.py  views.py  wsgi.py
accidentdetection/templates/accidentdetection/: about.html  base.html  contact.html  home.html
accidentdetectionapi/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_notification_alter_user_profile_picture_and_more.py
accounts/templates/accounts/: login.html  register.html
classifier/: models.py  props.py  serializers.py  urls.py  views.py
detector/: admin.py  models.py  tests.py  tools.py  urls.py  views.py
detector/migrations/: 0001_initial.py  0002_remove_prediction_date_time_prediction_date_and_more.py  0003_frame_prediction_image.py  0004_remove_frame_name.py  0005_alter_frame_image.py  0006_alter_frame_image.py  0007_alter_prediction_image.py  0008_delete_frame.py  0009_alter_prediction_confidence.py  0010_alter_prediction_confidence.py  0011_alter_prediction_prediction.py  0012_alter_prediction_image.py
detector/templates/detector/: dashbord.html  error_page.html  select_video.html  view_images.html  view_single.html
