[tool.poetry]
name = "accident detection"
version = "0.1.0"
description = ""
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
pafy = "^0.5.5"
youtube-dl = "^2021.12.17"
requests = "^2.28.2"
shafara-tool-kit = "0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
