[tool.poetry]
name = "accident-detection-ui"
version = "0.1.0"
description = ""
authors = ["jumashafara <jumashafara0@gmail.com>"]
readme = "README.md"
packages = [{include = "accident_detection_ui"}]

[tool.poetry.dependencies]
python = ">=3.9"
django = "^4.2"
pillow = "^9.5.0"
shafara-tool-kit = "0.1.1"
opencv-python = "^4.7.0.72"
requests = "^2.29.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
